<resources>
    <string name="app_name">Final Year Project</string>
    <string name="payroll">Payrolls Manage App</string>
    <string name="payrollsytem">Payrolls Management System</string>
    <string name="message">Welcome in Payrolls Management System\nof MNS-UET Multan. Here you can manage\n Employees Payrolls Slips &amp; also Calculate\n Employees Salaries.
    </string>
    <string name="login">LogIn</string>
    <string name="signup">Lets Start !</string>
    <string name="welcometext">Welcome here for Login</string>
    <string name="help">Help</string>
    <string name="forget">Forget Password?</string>
    <string name="noaccount">I have no account.</string>
    <string name="craeteaccount"><u>Create New Account ?</u></string>
    <string name="password">Enter Password</string>
    <string name="gmail_login">Enter Gmail</string>
    <string name="error">Oops! Something went Wrong.Please try Again.Please LogIn with correct gmail and password.</string>
    <string name="helpdialog">Click create new account and enter your data in the required fields then press the Submit Button for submit your data into Database and make sure that you remember Your Email and Password for Login.Thank You !</string>
    <string name="back">Back</string>
    <string name="username">Enter Username</string>
    <string name="submit">Submit</string>
    <string name="cnic">Enter cnic</string>
    <string name="gmail">Example0%@gmail.com</string>
    <string name="contact">Enter Contact</string>
    <string name="city">Enter City</string>
    <string name="or">OR</string>
    <string name="have">Already have Account !</string>
    <string name="password_signup">Enter Password</string>
    <string name="menu">Home</string>
    <string name="setting">Setting</string>
    <string name="departs">Departments</string>
    <string name="approve_files">Approve Files</string>
    <string name="slips">Pay Slips</string>
    <string name="help_main">Help</string>
    <string name="navigation_drawer_Open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="approvals">Approvals</string>
    <string name="Caluculate">Calculations</string>
    <string name="chemicaldepart">Chemical Engineering</string>
    <string name="electricaldepart">Electrical Engineering</string>
    <string name="civildepart">Civil Engineering Technology</string>
    <string name="mechanicaldepart">Mech Engineering Technology</string>
    <string name="csdepart">Computer Science</string>
    <string name="bbadepart">Business Administration</string>
    <string name="mathsdepart">Mathematics Department</string>
    <string name="physicsdepart">Physics Department</string>
    <string name="chemistrydepart">Chemistry Department</string>
    <string name="employee">Employees Department</string>
    <string name="admin">Administration</string>
    <string name="helptexta">How to Upload data into the System?</string>
    <string name="helptextb">Why Documents are not Uploading?</string>
    <string name="helptextc">How to Apply for Advance Salary?</string>
    <string name="helptextd">How to Frame a New Salary Structure?</string>
    <string name="aboutsystem">About the System</string>
    <string name="more"><u>More..</u></string>
    <string name="systempurpose">
        <a href="https://www.google.com/">System Purpose</a>
    </string>
    <string name="intface">
        <a href="https://www.google.com/">Interface</a>
    </string>
    <string name="aboutdata">
        <a href="https://www.google.com/">About Data</a>
    </string>
    <string name="updates">
        <a href="https://www.google.com/">Software &amp; Technical Updates</a>
    </string>
    <string name="helptextQ1">How to Upload data into the System?</string>
    <string name="helptextQ2">Why Documents are not Uploading?</string>
    <string name="helptextQ3">How to Apply for Advance Salary?</string>
    <string name="helptextQ4">How to Frame a New Salary Structure?</string>
    <string name="ansa">Select the Utilities Tab then Load Data Tab.Use the File Upload Link on left navigation bar.Uploading
        a document that already exists in digital form is relatively straightforward. Often, all you need to do is choose the
        upload option on the destination website or program you are using then select the file from the browser that pops up.
        We recommend uploading only Tab Delimited Files.
        Upload and view files
        On your Android phone or tablet open the Google Drive app.
        Tap Add.
        Tap Upload.
        Find and tap the files you want to upload.
        View uploaded files in My Drive until you move them.
                Upload files and folders
        On your computer go to drive.google.com.
        At the top left click New. File Upload or Folder Upload.
        Choose the file or folder you want to upload.
    </string>
    <string name="ansb">
        Your file may be corrupted, which means there are metadata issues in the file that occurred during original document generation
        scanning or some other conversion process, has produced an invalid PDF.Upload your file using a different browser or Incognito
        or Private browsing to make sure that certain browser extensions do not affect the process or the site you are loading.
    </string>
    <string name="ansc">National Bank of Pakistan Loan Scheme is an ideal chance for regular and service workers who plan to receive some
        cash advance. It is among the top public banks in Pakistan and offers various loans for NBP bank account holders federal employees
        and semi government workers as well as  government employees.
    </string>
    <string name="ansd">
        How to Establish Salary Ranges
        Determine the Organizations Compensation Philosophy.
        Conduct a Job Analysis.
        Group into Job Families.
        Rank Positions Using a Job Evaluation Method.
        Conduct Market Research.
        Create Job Grades.
        Create a Salary Range Based on Research.
    </string>
    <string name="salaries">Salary</string>
    <string name="selectfy">Select Date</string>
    <string name="pay_period">Pay Period</string>
    <string name="basicpay">Basic Pay</string>
    <string name="tax">Income Tax</string>
    <string name="allowance">Allownces</string>
    <string name="hra">Senior Post</string>
    <string name="others">House Rent</string>
    <string name="deduction">Deductions</string>
    <string name="pf">Leaves-Deduction</string>
    <string name="esi">ESI</string>
    <string name="date">dd/mm/yy</string>
    <string name="netpay">Net Pay</string>
    <string name="calculate_payroll">Calculate</string>
    <string name="trade">Trade Tax</string>
    <string name="conveyance_allowance">Conveyance</string>
    <string name="qualification_allawance">Qualification</string>
    <string name="medical_allawance">Medical Allowance</string>
    <string name="adhocreliefa">Adhoc Relief-2016</string>
    <string name="adhocreliefb">Adhoc Relief-2017</string>
    <string name="adhocreliefc">Adhoc Relief-2018</string>
    <string name="adhocreliefd">Adhoc Relief-2019</string>
    <string name="adhocreliefe">Adhoc Relief-2021</string>
    <string name="social_security">Social Security Benefit(30%)</string>
    <string name="price">Value</string>
    <string name="amount">Total amount</string>
    <string name="uniname">Muhammad Nawaz Sharif University of Engineering &amp; Technology Multan.</string>
    <string name="payslip">(<u>Pay Slip</u>)</string>
    <string name="number">01</string>
    <string name="number1">02</string>
    <string name="number2">02</string>
    <string name="number3">03</string>
    <string name="number4">04</string>
    <string name="number5">05</string>
    <string name="number6">06</string>
    <string name="number7">07</string>
    <string name="number8">08</string>
    <string name="number9">09</string>
    <string name="number10">10</string>
    <string name="number11">11</string>
    <string name="number12">12</string>
    <string name="nos">No.s</string>
    <string name="name">Information</string>
    <string name="emoluments"><u>EMOLUMENTS</u></string>
    <string name="basicpayallowance">Basic Pay</string>
    <string name="seniorpost">Senior Post Allowance</string>
    <string name="houserent">House Renty Alllowance</string>
    <string name="conveyance">Conveyance Allowance</string>
    <string name="qualification">Qualification Allowance</string>
    <string name="medical">Medical Allowance</string>
    <string name="adhocrelief16">Adhoc Relief Allowance-2016</string>
    <string name="adhocrelief17">Adhoc Relief Allowance-2017</string>
    <string name="adhocrelief18">Adhoc Relief Allowance-2018</string>
    <string name="adhocrelief19">Adhoc Relief Allowance-2019</string>
    <string name="adhocrelief21">Adhoc Relief Allowance-2021</string>
    <string name="socialsecurity">Social Security Benefit(30%)</string>
    <string name="totalemoluments">Total Emoluments</string>
    <string name="deductionunderline"><u>Deductions</u></string>
    <string name="incometax">Income Tax</string>
    <string name="gpfsubscription">G.P.F Subscription</string>
    <string name="recoverygpf">Recovery G.P.F</string>
    <string name="housebuildadvance">House Building Advance</string>
    <string name="vehicleadvance">Car/Scooter Advance</string>
    <string name="electricitycharges">Electricity Charges</string>
    <string name="suigascharge">Sui Gas Charges</string>
    <string name="watercharge">Water Charges</string>
    <string name="benevolentfund">Benevolent Fund</string>
    <string name="groupinsurance">Group Insurance</string>
    <string name="tradetax">Trade Tax</string>
    <string name="treasurer"><u>Additional Treasurer</u></string>
    <string name="deisgnation">Designation</string>
    <string name="employee_name">Name</string>
    <string name="employeename">Employee Name</string>
    <string name="designation">Designation</string>
    <string name="employee_qualification">Qualification</string>
    <string name="employee_depart">Department</string>
    <string name="employee_subject">Subject</string>
    <string name="payroll_date">00-Month-0000</string>
    <string name="subject_type">Subject</string>
    <string name="section">Section</string>
    <string name="session">Sesssion</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="practical">Practical</string>
    <string name="theory">Theory</string>
    <string name="approvals_submit">Submit</string>
    <string name="uni_half">UNIVERSITY OF ENGINEERING &amp; TECHNOLOGY,MULTAN.</string>
    <string name="uni_scndhalf">c/o.Govt.College of Technology, BCG Chowk, Bahawalpur Road,Multan, Pakistan.</string>
    <string name="date_set"><b>Date :</b></string>
    <string name="cheque_no">Cheque No.</string>
    <string name="instruction_cheque">Please do not write below this line.</string>
    <string name="signature">Signature</string>
    <string name="rupees">Rupees</string>
    <string name="date.">Date.</string>
    <string name="uni_frsthalf">UNIVERSITY OF ENGINEERING &amp; TECHNOLOGY,MULTAN.</string>
    <string name="uni_scondhalf">c/o.Govt.College of Technology, BCG Chowk, Bahawalpur Road,Multan, Pakistan.</string>
    <string name="subject"><b>Subject :</b></string>
    <string name="programme">Morning</string>
    <string name="sir"><b>Respected Sir</b></string>
    <string name="inform">It is requested to kindly accord the approval of the following</string>
    <string name="inform_scnd">Visiting Teachers for the Semister</string>
    <string name="semister">Fall_2018</string>
    <string name="scnd_half_approval">Computer Science</string>
    <string name="half_approval">Approval for Visiting Teachers for the Department of</string>
    <string name="instruction">Instructions</string>
</resources>