<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.QuestionsSection">

   <!-- <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="-118dp" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.030">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/helptextQ1"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/explain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/adamina"
                android:text="@string/ansa"
                android:textAlignment="inherit"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/question2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/helptextQ2"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/explain2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/adamina"
                android:text="@string/ansb"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/helptextQ3"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ans3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/adamina"
                android:text="@string/ansc"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/question4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/helptextQ4"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ans4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/adamina"
                android:text="@string/ansd"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <!--<TextView
       android:id="@+id/BackOption"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="@color/white"
       android:drawableStart="@drawable/rightarrow"
       android:fontFamily="@font/adamina"
       android:gravity="center"
       android:text="@string/back"
       android:textColor="@color/black"
       android:textFontWeight="600"
       android:textSize="14sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.045"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.030" />-->
</androidx.constraintlayout.widget.ConstraintLayout>