<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.HelpPageActivity">

 <!--   <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/logo"/>-->

    <androidx.cardview.widget.CardView
        android:id="@+id/UploadData"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/ripple_effect_background"
        android:backgroundTint="@color/lightblue"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grey_ripple_background"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:fontFamily="@font/adamina"
            android:text="@string/helptexta"
            android:textFontWeight="500"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/DocsUpload"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/lightblue"
        android:backgroundTint="@color/lightblue"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UploadData"
        app:layout_constraintVertical_bias="0.040">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_ripple_background"
    android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:fontFamily="@font/adamina"
            android:text="@string/helptextb"
            android:textFontWeight="500"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
</LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/AdvanceSalary"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/lightblue"
        android:backgroundTint="@color/lightblue"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DocsUpload"
        app:layout_constraintVertical_bias="0.050">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/grey_ripple_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:fontFamily="@font/adamina"
            android:text="@string/helptextc"
            android:textFontWeight="500"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/NewSalaryStructure"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/lightblue"
        android:backgroundTint="@color/lightblue"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdvanceSalary"
        app:layout_constraintVertical_bias="0.050">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/grey_ripple_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:fontFamily="@font/adamina"
            android:text="@string/helptextd"
            android:textFontWeight="500"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/MorePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/adamina"
        android:text="@string/more"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewSalaryStructure"
        app:layout_constraintVertical_bias="0.080" />

    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MorePage"
        app:layout_constraintVertical_bias="0.10">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/aboutsystem"
            android:textColor="@color/selfcolor_blue"
            android:textFontWeight="600"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/System_Purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/systempurpose"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey"
            android:textFontWeight="500"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Interface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/intface"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey"
            android:textFontWeight="500"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/About_Data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/aboutdata"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Updates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:layout_marginTop="10dp"
            android:text="@string/updates"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="14sp" />

    </LinearLayout>

    <!--
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/Back_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/selfwhite"
            android:clickable="true"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout19"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/linearLayout19"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout19"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_top_arrow" />
    -->
</androidx.constraintlayout.widget.ConstraintLayout>