<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.VeiwPageActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie1"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/welcomepage" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@id/lottie1"
        android:layout_alignParentBottom="true"
        android:background="@drawable/frame_background">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payrollsytem"
            android:fontFamily="@font/adamina"
            android:textFontWeight="600"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:lineHeight="30dp"
                android:text="@string/message"
                android:textAlignment="center"
                android:textFontWeight="500"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:textColor="@color/selfcolor_grey"/>

            <Button
                android:id="@+id/SignUpButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/button_arrow"
                android:drawablePadding="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/login_button"
                android:text="@string/signup"
                android:textSize="16sp"
                android:capitalize="none"
                android:textFontWeight="500"
                android:textAllCaps="false"
                android:fontFamily="@font/adamina"
                android:textColor="@color/grey"/>

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>